Prevent background image of login page from distorting
We need a better picture though

--- a/css/loginPage.css
+++ b/css/loginPage.css
@@ -37,7 +37,7 @@ body {
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background-image: url("../images/cfair.png");
-  background-size: 100% 100%;
+  background-size: 100% auto;
   background-repeat: no-repeat;
 
 
